--- a/package.json
+++ b/package.json
@@ -1,22 +1,15 @@
 {
   "name": "task8",
   "version": "1.0.0",
-  "description": "",
-  "main": "carsData.js",
+  "main": "index.js",
+  "repository": "https://github.com/nazrueee/newProject.git",
+  "author": "Nazruddin Ahmad <nazruddin.ahmad48@gmail.com>",
+  "license": "MIT",
   "scripts": {
-    "start":"node carsServer.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "babel src -d lib",
+    "test": "jest",
+    "start":"node index.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/nazrueee/newProject.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/nazrueee/newProject/issues"
-  },
-  "homepage": "https://github.com/nazrueee/newProject#readme",
   "dependencies": {
     "express": "^4.18.2"
   }
